Software/PSoc/Roadster/Roadster/Roadster1.0.cydsn/BUILD.log
--------------- Build Started: 03/28/2018 14:33:52 Project: Roadster1.0, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Jona\AppData\Local\Cypress Semiconductor\PSoC Creator\4.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\Jona\Documents\GitHub\RobotComp2ELO\Software\PSoc\Roadster\Roadster\Roadster1.0.cydsn\Roadster1.0.cyprj -d CY8C5288LTI-LP090 -s C:\Users\Jona\Documents\GitHub\RobotComp2ELO\Software\PSoc\Roadster\Roadster\Roadster1.0.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: sdb.M0065: information: Analog terminal "vdac_ref" on ADC_SAR_SEQ_v2_10 is unconnected.
 * C:\Users\Jona\Documents\PSoC Creator\4.1\Downloads ( 4.1).cylib\ADC_SAR_SEQ_v2_10\PSoC5\ADC_SAR_SEQ_v2_10.cysch (Signal: vdac_ref)
 * C:\Users\Jona\Documents\PSoC Creator\4.1\Downloads ( 4.1).cylib\ADC_SAR_SEQ_v2_10\PSoC5\ADC_SAR_SEQ_v2_10.cysch (Shape_798)
 * C:\Users\Jona\Documents\PSoC Creator\4.1\Downloads ( 4.1).cylib\ADC_SAR_SEQ_v2_10\PSoC5\ADC_SAR_SEQ_v2_10.cysch (Shape_885)
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 2 pin(s) will be assigned a location by the fitter: Trigger2(0), Trigger3(0)
Analog Placement...
Info: apr.M0002: Analog signal "Net_535" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_536" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_538" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_540" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_541" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_543" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_545" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_546" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_548" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_550" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_551" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_553" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_555" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_556" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_558" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_560" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_561" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_563" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_565" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_566" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_568" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_570" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_571" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_573" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_575" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_576" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_578" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_580" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_581" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_583" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_585" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_586" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_588" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_590" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_591" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_593" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_595" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_596" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_598" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_600" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_601" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_602" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_603" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_604" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_605" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_606" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_607" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_608" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_609" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_610" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_611" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_612" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_613" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_614" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_615" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_616" is connected to one terminal only. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'berekenMediaan':
main.c:17:1: error: parameter 'IRDrempel' is initialized
 uint8 IRDrempel = 190;
 ^
main.c:20:1: error: parameter 'selectUS' is initialized
 uint8 selectUS = 0;
 ^
main.c:32:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.c:46:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.c:101:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.c:113:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.c:123:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.c:131:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.c:141:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.c:151:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.c:169:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.c:184:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
In file included from main.c:13:0:
projectMain.h:31:6: error: old-style parameter declarations in prototyped function definition
 void berekenMediaan(uint16 array[])
      ^
main.c:191:1: error: expected '{' at end of input
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 03/28/2018 14:34:46 ---------------
